2002-03-24  Thomas Hepper ( th@ant.han.de)
	* changer-src/chg-scsi-chio.c: Fixed problems introduced by the agets change
	* client-src/sendbackup-dump.c: Fixed compile problem on AIX, no_record
	  is no longeer defined, ist is now options->no_record.

2002-03-24  John R. Jackson (jrj@purdue.edu)

	* client-src/amandad.c: Make sure argv[0] is valid before using it.
	* restore-src/amidxtaped.c: Ditto.
	* server-src/amindexd.c: Ditto.

2002-03-24  John R. Jackson (jrj@purdue.edu)

	* client-src/client_util.c: Use the Amanda memory allocation code.
	* client-src/sendbackup-gnutar.c: Ditto.
	* client-src/sendsize.c: Ditto.
	* common-src/match.c: Ditto.
	* recover-src/amrecover.c: Ditto.
	* recover-src/display_commands.c: Ditto.
	* recover-src/extract_list.c: Ditto.
	* restore-src/amidxtaped.c: Ditto.
	* server-src/amflush.c: Ditto.
	* server-src/disk_history.c: Ditto.
	* server-src/driver.c: Ditto.
	* server-src/dumper.c: Ditto.
	* server-src/list_dir.c: Ditto.
	* common-src/amanda.h: Always pass the source file and line number
	  to the memory routines to make it easier to debug.
	* common-src/alloc.c: Ditto.
	* common-src/file.c: Ditto.
	* common-src/dgram.c: Ditto.
	* common-src/dgram.h: Ditto.

2002-03-24  Thomas Hepper ( th@ant.han.de)
	* changer-src/chg-scsi.c: Fixed problems introduced by the agets change
	* changer-src/chg-scsi.c (MapBarCode): Fixed error in eof handling
	  eof was not correctly detected, now use the feof function.
	* changer-src/scsi-aix.c (SCSI_OS_Version()): New function to print
	  the rcsid 
	* changer-src/scsi-aix.c: same as above
	* changer-src/scsi-cam.c: same as above
	* changer-src/scsi-hpux_new.c: same as above
	* changer-src/scsi-irix.c: same as above
	* changer-src/scsi-linux.c: same as above
	* changer-src/scsi-solaris.c: same as above
	* changer-src/scsi-changer-driver.c (DLT448ElementStatus()): Fixed 
	  error messages. Fixed some errors with the barcode handling.

2002-03-23  John R. Jackson (jrj@purdue.edu)
