@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /* 
- * $Id: sendbackup-dump.c,v 1.65.2.5.4.2.2.4 2002/03/24 21:00:58 ant Exp $
+ * $Id: sendbackup-dump.c,v 1.65.2.5.4.2.2.5 2002/03/24 21:27:15 martinea Exp $
  *
  * send backup data using BSD dump
  */
@@ -215,7 +215,7 @@ static void start_backup(host, disk, amdevice, level, dumpdate, dataf, mesgf, in
 	dumppid = pipespawn(progname, STDIN_PIPE,
 			    &dumpin, &dumpout, &mesgf,
 			    "xfsdump",
-			    no_record ? "-J" : skip_argument,
+			    options->no_record ? "-J" : skip_argument,
 			    "-F",
 			    "-l", dumpkeys,
 			    "-",
@@ -241,7 +241,7 @@ static void start_backup(host, disk, amdevice, level, dumpdate, dataf, mesgf, in
 	program->restore_name = VXRESTORE;
 
 	dumpkeys = vstralloc(level_str,
-			     no_record ? "" : "u",
+			     options->no_record ? "" : "u",
 			     "s",
 			     "f",
 			     NULL);
@@ -282,7 +282,7 @@ static void start_backup(host, disk, amdevice, level, dumpdate, dataf, mesgf, in
 	program->restore_name = VRESTORE;
 
 	dumpkeys = vstralloc(level_str,
-			     no_record ? "" : "u",
+			     options->no_record ? "" : "u",
 			     "b",
 			     "f",
 			     NULL);
