@@ -1,3 +1,7 @@
+2002-03-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* client-src/sendbackup-gnutar.c: Fix use of no_record.
+
 2002-03-24  Thomas Hepper ( th@ant.han.de)
 	* changer-src/chg-scsi-chio.c: Fixed problems introduced by the agets change
 	* client-src/sendbackup-dump.c: Fixed compile problem on AIX, no_record
